# hedy-haskell

./: .gitignore  README.md  hedy-haskell.cabal  hedy.cabal.OLD  package.yaml
app/: Main.hs
hedy.hsproj/: .uuid
hedy.hsproj/hedy/: Level1.hs  Level1Lang.hs  Level1Parser.hs  Level1Spec.hs  Level1a.hs  Level1b.hs  Level2.hs  Level2Lang.hs  Level2Parser.hs  Level2Spec.hs  Main.hs  Spec.hs  _Level1Parser.hsplay  hedy.cabal
hedy.hsproj/hedy/samples/: level1.txt  level2.txt
samples/: level1.txt  level2.txt  level2b.txt
src/: Foo.hs  Level1.hs  Level1Lang.hs  Level1Parser.hs  Level1Spec.hs  Level2.hs  Level2Lang.hs  Level2Parser.hs  Level2Spec.hs
src/Level1/: AST.hs  Interpreter.hs  Parser.hs  Spec.hs
src/Level2/: AST.hs  Interpreter.hs  Parser.hs  Spec.hs
test/: Level1Spec.hs  Main.hs  Spec.hs
