cabal-version: 2.4
name: hedy
version: 0.1
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0
extra-source-files:
    samples/level1.txt
    samples/level2.txt

executable hedy
    main-is: Main.hs
    other-modules:
        Level1Lang
        Level2Lang
        Level2
        Level1
        Level1Parser
    default-language: Haskell2010
    build-depends:
        raw-strings-qq -any,
        base -any,
        containers -any,
        flow -any,
        mtl -any,
        text -any,
        megaparsec -any

executable test
    main-is: Spec.hs
    other-modules:
        Level2Spec
        Level1Spec
    default-language: Haskell2010
    build-depends:
        base -any,
        hspec -any,
        raw-strings-qq -any,
        megaparsec -any,
        containers -any
